[gd_scene load_steps=13 format=2]

[ext_resource path="res://Player_v2.tscn" type="PackedScene" id=1]
[ext_resource path="res://World1.tscn" type="PackedScene" id=2]
[ext_resource path="res://Main2.gd" type="Script" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]
[ext_resource path="res://Mirror2.tscn" type="PackedScene" id=5]
[ext_resource path="res://MirrorA.tres" type="Material" id=6]
[ext_resource path="res://Camera.gd" type="Script" id=7]
[ext_resource path="res://MirrorB.tres" type="Material" id=8]

[sub_resource type="CubeMesh" id=10]
size = Vector3( 0.1, 0.1, 0.1 )

[sub_resource type="PlaneMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_texture = ExtResource( 4 )

[sub_resource type="CylinderMesh" id=3]

[node name="Main2" type="Spatial" groups=[
"mirrors",
]]
script = ExtResource( 3 )

[node name="Player" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1.5, 0, 0, 0, 1, 0, 6.33086, 0 )
collision_mask = 7

[node name="Camera" parent="Player/CameraAnchor" index="0"]
script = ExtResource( 7 )

[node name="MeshInstance2" type="MeshInstance" parent="Player/CameraAnchor/Camera" index="2"]
transform = Transform( 1, 0, 0, 0, -2.44382e-07, -1.5, 0, 1, -1.62921e-07, 0.0994295, -0.212887, 1.13687e-13 )
layers = 7
mesh = SubResource( 10 )
material/0 = null

[node name="World1" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 0, 0 )

[node name="Mirrora" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.45354, 0 )
visible = false
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="Mirrora"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )
mesh = SubResource( 3 )
material/0 = null

[node name="MirrorA" parent="." instance=ExtResource( 5 )]
material/0 = ExtResource( 6 )
viewport_mirror = NodePath("../MirrorB/Viewport")

[node name="Camera" parent="MirrorA/Viewport" index="0"]
cull_mask = 1048572

[node name="MeshInstance" parent="MirrorA/Viewport/Camera" index="1"]
visible = false

[node name="MirrorB" parent="." instance=ExtResource( 5 )]
material/0 = ExtResource( 8 )
viewport_mirror = NodePath("../MirrorA/Viewport")

[node name="Camera" parent="MirrorB/Viewport" index="0"]
cull_mask = 1048572

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control"]
modulate = Color( 1, 1, 1, 0.12549 )
position = Vector2( 500, 300 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
[connection signal="new_portal" from="Player" to="." method="_on_KinematicBody_new_portal"]
[connection signal="teleport" from="MirrorA" to="." method="teleport"]
[connection signal="teleport" from="MirrorB" to="." method="teleport"]

[editable path="Player"]

[editable path="MirrorA"]

[editable path="MirrorB"]
